--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@
 <body>
     <div class="form-container">
         <div class="language-switch">
-            <!-- <button id="switchLang">Switch to Arabic</button> -->
-            <button id="switchLang">AR</button>
+            <button id="switchLang">Switch to Arabic</button>
         </div>
         
         <div id="captchaValidationSection" class="form-group">
@@ -191,7 +190,7 @@
                 <input type="email" id="email" name="email" class="emailPlaceholder" placeholder="Enter your email" required>
             </div>
 
-            <div class="form-group inline-50-block ">
+            <div class="form-group inline-50-block">
                 <label for="date" id="dateLabel">Date</label>
                 <input type="text" id="date" name="date" readonly>
             </div>
@@ -201,9 +200,14 @@
                 <input type="text" id="time" name="time" readonly>
             </div>
 
-            <div class="form-group">
-                <label for="location" id="locationLabel">Location</label>
-                <input type="text" id="location" name="location" placeholder="Fetching location..." readonly>
+            <div class="form-group inline-50-block">
+                <label for="latitude" id="latitudeLabel">Latitude</label>
+                <input type="text" id="latitude" name="latitude" class="latitudePlaceholder" placeholder="Fetching latitude..." readonly>
+            </div>
+
+            <div class="form-group inline-50-block">
+                <label for="longitude" id="longitudeLabel">Longitude</label>
+                <input type="text" id="longitude" name="longitude" class="longitudePlaceholder" placeholder="Fetching longitude..." readonly>
             </div>
 
             <div class="form-group">
@@ -233,7 +237,6 @@
         const translations = {
             en: {
                 switchLang: 'Switch to Arabic',
-                lang: 'AR',
                 captchaLabel:'Captcha',
                 refreshCaptcha:'Refresh',
                 validateCaptchaButton:'Verify',
@@ -244,13 +247,16 @@
                 emailLabel: 'Email Address',
                 dateLabel: 'Date',
                 timeLabel: 'Time',
-                locationLabel: 'Location',
+                latitudeLabel: 'Latitude',
+                longitudeLabel: 'Longitude',
                 contactLabel: 'Contact Details',
                 descriptionLabel: 'Description of Incident',
                 evidenceLabel: 'Evidence Attachment',
                 captchaPlaceholder:'Enter the Captcha',
                 namePlaceholder: 'Enter your Full Name',
                 emailPlaceholder: 'Enter your Email Address',
+                latitudePlaceholder: 'Fetching latitude...',
+                longitudePlaceholder: 'Fetching longitude...',
                 contactPlaceholder: 'Enter your Contact Details',
                 descriptionPlaceholder: 'Enter your Description of Incident',
                 submiButton: 'Submit',
@@ -261,7 +267,6 @@
             },
             ar: {
                 switchLang: 'التبديل إلى الإنجليزية',
-                lang: 'EN',
                 captchaLabel:'كلمة التحقق',
                 refreshCaptcha:'ينعش',
                 validateCaptchaButton:'يؤكد',
@@ -272,13 +277,16 @@
                 emailLabel: 'عنوان البريد الإلكتروني',
                 dateLabel: 'التاريخ',
                 timeLabel: 'الوقت',
-                locationLabel: 'الموقع',
+                latitudeLabel: 'خط العرض',
+                longitudeLabel: 'خط الطول',
                 contactLabel: 'تفاصيل الاتصال',
                 descriptionLabel: 'وصف الحادث',
                 evidenceLabel: 'إرفاق الأدلة',
                 captchaPlaceholder:'أدخل كلمة التحقق',
                 namePlaceholder: 'أدخل اسمك الكامل',
                 emailPlaceholder: 'أدخل عنوان البريد الإلكتروني الخاص بك',
+                latitudePlaceholder: 'جارٍ جلب خط العرض...',
+                longitudePlaceholder: 'جارٍ جلب خط الطول...',
                 contactPlaceholder: 'أدخل تفاصيل الاتصال الخاصة بك',
                 descriptionPlaceholder: 'أدخل وصف الحادث الخاص بك',
                 submiButton: 'يُقدِّم',
@@ -301,7 +309,6 @@
             'emailLabel',
             'dateLabel',
             'timeLabel',
-            'locationLabel',
             'contactLabel',
             'descriptionLabel',
             'evidenceLabel',
@@ -311,6 +318,8 @@
             'captchaPlaceholder',
             'namePlaceholder',
             'emailPlaceholder',
+            'latitudePlaceholder',
+            'longitudePlaceholder',
             'contactPlaceholder',
             'descriptionPlaceholder',
         ];
@@ -327,7 +336,7 @@
                 document.getElementsByClassName(id)[0].placeholder = translation[id];
             });
 
-            switchLangBtn.textContent = translation.lang;
+            switchLangBtn.textContent = translation.switchLang;
 
             // Adjust text direction
             document.body.style.direction = currentLang === 'en' ? 'ltr' : 'rtl';
@@ -389,50 +398,46 @@
             timeField.value = now.toLocaleTimeString();
 
             // Fetch and autofill location
-            const locationField = document.getElementById('location');
+            const latitudeField = document.getElementById('latitude');
+            const longitudeField = document.getElementById('longitude');
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(
                     (position) => {
                         const { latitude, longitude } = position.coords;
-                        locationField.value = `Lat: ${latitude.toFixed(4)}, Long: ${longitude.toFixed(4)}`;
+                        latitudeField.value = latitude.toFixed(6);
+                        longitudeField.value = longitude.toFixed(6);
                     },
                     (error) => {
-                        locationField.value = translations[currentLang].locationFetchError;
+                        latitudeField.value = translations[currentLang].locationFetchError;
+                        longitudeField.value = translations[currentLang].locationFetchError;
                     }
                 );
             } else {
-                locationField.value = 'Geolocation not supported';
+                latitudeField.value = 'Geolocation not supported';
             }
         }
 
 
-        // Get current route path and params
+        // Get current route path and query params
         const getCurrentRouteInfo = () => {
-            const currentPath = window.location.pathname;  // Get the current path
-            const params = new URLSearchParams(window.location.search);  // Get query parameters
-
-            // // If there are query parameters, log them
-            // if (params.toString()) {
-            //     console.log("Route Params:", Object.fromEntries(params.entries()));
-            // } else {
-            //     console.log("No route parameters found.");
-            // }
-
+            const params = new URLSearchParams(window.location.search);
             return {
-                currentPath: currentPath,
+                currentPath: window.location.pathname,
                 params: Object.fromEntries(params.entries())
             };
         };
 
-        // Example: Get current route info
         const routeInfo = getCurrentRouteInfo();
-        // console.log(routeInfo);
 
         // Handle form submission
         document?.getElementById('contactForm')?.addEventListener('submit', async (event) => {
             event.preventDefault(); // Prevent the default form submission
-
-            const formData = new FormData(event.target);
+            
+            const formData = {
+                ...Object.fromEntries(new FormData(event.target)),
+                type:routeInfo?.params?.type,
+                lang: currentLang,
+            };
 
             const messageElement = document.getElementById('message');
             messageElement.className = 'message';
@@ -441,8 +446,12 @@
             try {
                 messageElement.textContent = translations[currentLang].submitting;
                 const response = await fetch('https://jsonplaceholder.typicode.com/posts', {
+                    headers: {
+                        'Accept': 'application/json',
+                        'Content-Type': 'application/json'
+                    },
                     method: 'POST',
-                    body: formData
+                    body: JSON.stringify(formData)
                 });
 
                 if (response.ok) {
