--- a/index.html
+++ b/index.html
@@ -198,24 +198,14 @@
             </div>
 
             <div class="form-group">
-                <label for="date" id="dateLabel">Reporting Date and Time</label>
-                <input type="text" id="date" name="date" readonly>
+                <label for="reportingDateTime" id="dateLabel">Reporting Date and Time</label>
+                <input type="datetime" id="reportingDateTime" name="reportingDateTime" readonly>
             </div>
-
-            <!-- <div class="form-group inline-50-block">
-                <label for="time" id="timeLabel">Reporting Time</label>
-                <input type="text" id="time" name="time" readonly>
-            </div> -->
 
             <div class="form-group">
-                <label for="incidentDate" id="incidentDateLabel">Incident Date</label>
-                <input type="datetime-local" id="incidentDate" name="incidentDate">
+                <label for="incidentDateTime" id="incidentDateLabel">Incident Date and Time</label>
+                <input type="datetime-local" id="incidentDateTime" name="incidentDateTime">
             </div>
-
-            <!-- <div class="form-group inline-50-block">
-                <label for="incidentTime" id="incidentTimeLabel">Incident Time</label>
-                <input type="time" id="incidentTime" name="incidentTime">
-            </div> -->
 
             <div class="form-group inline-50-block">
                 <label for="latitude" id="latitudeLabel">Latitude</label>
